# project-management-system

./: .env.default  README.md  docker-compose.yaml
apps/monolith/: .env.default  Dockerfile  README.md  pyproject.toml
apps/monolith/alembic/: env.py
apps/monolith/alembic/versions/: 2025_12_12_0033-02f9545c9d6b_create_auth_schema.py  2025_12_12_0040-e1f833767dbc_create_roles_table.py  2025_12_12_0122-30220490f5a3_create_users_table.py  2025_12_12_1155-3fb10c429b7c_create_sessions_table.py  2025_12_12_1359-7a15b4271034_init_data_for_auth_schema.py  2025_12_14_0108-87143af3144e_create_user_profile_schema.py  2025_12_14_0202-6c9bf61d4304_schema_user_profile_create_user_.py  2025_12_14_1759-b0fe1f867fdd_create_project_schema.py  2025_12_14_1836-1bdd29bbcfeb_create_task_status_table_in_project.py  2025_12_14_1953-a61250d29c59_init_data_for_task_status.py  2025_12_14_2054-badf501cc694_create_projects_table.py  2025_12_14_2205-c56928592a0d_create_project_participants_table.py  2025_12_14_2245-55fea1ab5b36_create_project_sprints_table.py  2025_12_14_2321-1c189ea4bcd5_create_project_tasks_table.py  2026_01_07_0011-6aa6f418170e_create_project_tasks_table.py
apps/monolith/scripts/: entrypoint.sh
apps/monolith/src/monolith/: app.py  lifespan.py  main.py
apps/monolith/src/monolith/auth/data/: role.json
apps/monolith/src/monolith/config/: auth_config.py  db_config.py  settings.py  url_config.py
apps/monolith/src/monolith/infrastructure/: database.py
apps/monolith/src/monolith/presentation/: app.py
apps/monolith/src/monolith/presentation/api/: __init__.py
apps/monolith/src/monolith/project/infrastructure/: constants.py
(+278 files in other folders)
