[project]
name = "monolith"
version = "0.1.0"
description = ""
authors = [
    {name = "Kotimish",email = "kotov.mikhail.96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.123.5,<0.124.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg (>=3.3.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "monolith", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.poetry.scripts]
start = "monolith.main:run"
